<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/home_"
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_home"
        app:cnb_backgroundColor="@color/signature_blue" />

    <item android:title="@string/fleming"
        android:id="@+id/bottom_nav_fleming"
        android:icon="@drawable/message_dark"
        app:cnb_backgroundColor="@color/signature_blue" />

    <item android:title="@string/telemed"
        android:id="@+id/bottom_nav_tele_medicine"
        android:icon="@drawable/navigation_dark"
        app:cnb_backgroundColor="@color/signature_blue" />

    <item android:title="@string/dashboard"
        android:id="@+id/bottom_nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        app:cnb_backgroundColor="@color/signature_blue" />

    <item android:title="@string/profile"
        android:id="@+id/bottom_nav_profile"
        android:icon="@drawable/ic_person_pin"
        app:cnb_backgroundColor="@color/signature_blue" />

</menu>