<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    android:theme="@style/Theme.BluePill.Doctor"
    android:orientation="vertical"
    tools:context=".Common.DoctorLogInSignUp.DoctorSignUp3">


    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:progressTint="@color/doctor_pink"
        android:progress="60"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_below="@id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pg_3"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:textColor="@color/black"/>

    <LinearLayout android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/roboto_medium"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="18sp"/>


        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:theme="@style/Theme.BluePill.Custom">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textAlignment="center"
                android:background="@drawable/radio_selector_doctor"
                android:button="@color/transparent"
                android:text="@string/male"
                android:textColor="@drawable/radio_text_color_doctor" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:background="@drawable/radio_selector_doctor"
                android:button="@color/transparent"
                android:text="@string/female"
                android:textColor="@drawable/radio_text_color_doctor" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/radio_selector_doctor"
                android:button="@color/transparent"
                android:text="@string/other"
                android:textColor="@drawable/radio_text_color_doctor" />

        </RadioGroup>

        <Button
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:id="@+id/next_btn"
            android:onClick="callDoc4"
            android:layout_gravity="center"
            android:layout_height="60dp"
            android:text="@string/next"/>


    </LinearLayout>

</RelativeLayout>