<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    android:theme="@style/Theme.BluePill.Doctor"
    tools:context=".Common.DoctorLogInSignUp.DoctorSignUp5">

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="100"
        android:progressTint="@color/doctor_pink" />

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_below="@id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pg_5"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="CODE"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:textColor="@color/black"
            android:textSize="100sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:textAlignment="center"
            android:layout_marginBottom="25dp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/verify_your_number_with_code_sent_to_you"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"/>


        <com.chaos.view.PinView
            android:layout_marginTop="40dp"
            android:hint="@string/pin_view"
            android:id="@+id/pin_view"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hapticFeedbackEnabled="true"
            android:cursorVisible="true"
            android:inputType="number"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="8dp"
            app:itemWidth="50dp"
            app:lineColor="@color/doctor_pink" />

        <Button
            android:id="@+id/verify_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/verify_code"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_medium"
            android:padding="10dp"
            android:text="@string/i_did_not_receive_the_code"
            android:textColor="@color/doctor_pink_dark" />

        <TextView
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:fontFamily="@font/roboto_bold"
            android:layout_gravity="center"
            android:text="@string/resend"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>


    </LinearLayout>


</RelativeLayout>